feat(servicerequest): hide team on print

--- a/app/views/servicerequests/_partials/detail.html
+++ b/app/views/servicerequests/_partials/detail.html
@@ -233,6 +233,7 @@
         <!-- end issue description -->
         <!-- start issue team -->
         <div
+          print-hide
           ng-show="servicerequest.team && servicerequest.team.length > 0"
           ng-include="'views/servicerequests/_partials/team.html'"
         ></div>
