refactor(servicerequest): update confirm label & action

--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -4,8 +4,8 @@
     <a
       show-if-has-permit="servicerequest:attend"
       class="nav-link text-muted no-border"
-      title="Click To Attend Issue"
-      ng-click="onAttend()"
+      title="Click To Confirm Issue"
+      ng-click="onConfirm()"
     >
       <span class="nav-text">
         <i class="ion-ios-shuffle-strong"></i>
