fix(servicerequest): remove all & export action on the list

--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -2,7 +2,7 @@
 <ul class="nav navbar-nav">
   <li ng-if="!servicerequest.operator" class="nav-item b-r p-r">
     <a
-      show-if-has-permit="servicerequest:attend"
+      show-if-has-permit="servicerequest:confirm"
       class="nav-link text-muted no-border"
       title="Click To Confirm Issue"
       ng-click="onConfirm()"
