--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -23,6 +23,17 @@
       </span>
     </a>
   </li>
+  <li ng-if="servicerequest.operator && canWatch()" class="nav-item b-l p-l">
+    <a
+      ng-click="onWatch()"
+      class="nav-link text-muted no-border"
+      title="Click to Watch Issue & Receive Updates"
+    >
+      <span class="nav-text">
+        <i class="ti-eye"></i>
+      </span>
+    </a>
+  </li>
   <li
     ng-if="servicerequest.operator && servicerequest.assignee && !servicerequest.attendedAt && !servicerequest.resolvedAt"
     class="nav-item b-l p-l"
@@ -50,7 +61,7 @@
       title="Click To Mark Issue as Complete"
     >
       <span class="nav-text">
-        <i class="ti-check-box"></i>
+        <i class="ion-android-checkbox-outline"></i>
       </span>
     </a>
   </li>
@@ -65,7 +76,7 @@
       title="Click To Mark Issue as Verified"
     >
       <span class="nav-text">
-        <i class="ti-eye"></i>
+        <i class="ion-android-done-all"></i>
       </span>
     </a>
   </li>
@@ -80,8 +91,7 @@
       title="Click To Mark Issue as Approve"
     >
       <span class="nav-text">
-        <!--<i class="ti-ink-pen"></i>-->
-        <i class="ti-new-window"></i>
+        <i class="ion-android-checkmark-circle"></i>
       </span>
     </a>
   </li>
