chore(servicerequest): show zone changes on changelog

--- a/app/views/servicerequests/_partials/comments.html
+++ b/app/views/servicerequests/_partials/comments.html
@@ -79,6 +79,9 @@
           </p>
           <p ng-if="comment.assignee && comment.assignee.name">
             Assign to {{ comment.assignee.name }}
+            <span ng-if="comment.zone && comment.zone.name">
+              of {{ comment.zone.name.en }} zone
+            </span>
           </p>
           <p ng-if="comment.resolvedAt">
             Change status to
