--- a/app/views/servicerequests/_partials/comments.html
+++ b/app/views/servicerequests/_partials/comments.html
@@ -184,7 +184,7 @@
           </p>
           <p ng-if="comment.changer && comment.member">
             {{ comment.changer._id === comment.member._id ? 'Join' : 'Added
-            '+member.name }} to receive issue updates
+            '+comment.member.name }} to receive issue updates
           </p>
           <!-- TODO show attachment changelog -->
         </div>
