--- a/app/views/servicerequests/_partials/operator_filter.html
+++ b/app/views/servicerequests/_partials/operator_filter.html
@@ -25,14 +25,14 @@
             <div class="input-group">
               <input
                 type="text"
-                ng-change="onSearchAssignees()"
+                ng-change="onSearchParties('assignees')"
                 ng-model="search.party"
                 class="form-control form-control-sm"
                 placeholder="Search Operator ..."
               />
               <span class="input-group-btn">
                 <button
-                  ng-click="onSearchAssignees()"
+                  ng-click="onSearchParties('assignees')"
                   class="btn btn-default btn-sm no-shadow"
                   type="button"
                 >
