--- a/app/views/servicerequests/_partials/team_modal.html
+++ b/app/views/servicerequests/_partials/team_modal.html
@@ -10,29 +10,29 @@
       ×
     </button>
     <h4 class="modal-title">
-      Assign Issue
+      Add Team Member
     </h4>
   </div>
   <!-- end modal header -->
 
   <div class="modal-body">
     <div class="container-fluid">
-      <!-- start operator list -->
+      <!-- start team list -->
       <div class="row-col lt">
-        <!-- start operator list search -->
+        <!-- start team list search -->
         <div class="list-search">
           <form>
             <div class="input-group">
               <input
                 type="text"
-                ng-change="onSearchParties('assignees')"
+                ng-change="onSearchParties('team')"
                 ng-model="search.party"
                 class="form-control form-control-sm"
-                placeholder="Search Assignee ..."
+                placeholder="Search Member ..."
               />
               <span class="input-group-btn">
                 <button
-                  ng-click="onSearchParties('assignees')"
+                  ng-click="onSearchParties('team')"
                   class="btn btn-default btn-sm no-shadow"
                   type="button"
                 >
@@ -42,23 +42,23 @@
             </div>
           </form>
         </div>
-        <!-- end operator list search -->
+        <!-- end team list search -->
 
-        <!-- start operator listing -->
+        <!-- start team listing -->
         <div class="row-row">
           <div class="row-body hover">
             <div class="list" data-ui-list="info">
               <div
                 class="list-item"
-                ng-repeat="assignee in assignees"
-                title="{{assignee.name}}"
-                ng-click="assign(assignee)"
+                ng-repeat="member in team"
+                title="{{member.name}}"
+                ng-click="addTeamMember(member)"
               >
                 <div class="list-left">
                   <span class="w-40 avatar circle">
                     <letter-avatar
-                      title="{{assignee.name}}"
-                      data="{{assignee.name}}"
+                      title="{{member.name}}"
+                      data="{{member.name}}"
                       height="60"
                       width="60"
                       shape="round"
@@ -68,28 +68,28 @@
                 </div>
                 <div class="list-body">
                   <div class="item-title" title="Name">
-                    {{assignee.name}}
+                    {{member.name}}
                     <br />
                     <span
                       class="text-sm text-muted"
                       title="Roles"
-                      ng-if="assignee.roles"
+                      ng-if="member.roles"
                     >
-                      {{showPartyRoles(assignee)}}
+                      {{showPartyRoles(member)}}
                     </span>
                     <span
                       class="text-sm text-muted"
                       title="Area"
-                      ng-if="assignee.jurisdiction"
+                      ng-if="member.jurisdiction"
                     >
-                      | {{assignee.jurisdiction.name}}
+                      | {{member.jurisdiction.name}}
                     </span>
                     <span
                       class="text-sm text-muted"
                       title="Zone"
-                      ng-if="assignee.zone"
+                      ng-if="member.zone"
                     >
-                      | {{assignee.zone.name.en}}
+                      | {{member.zone.name.en}}
                     </span>
                   </div>
                 </div>
@@ -97,9 +97,9 @@
             </div>
           </div>
         </div>
-        <!-- end operator listing -->
+        <!-- end team listing -->
       </div>
-      <!-- end operators list -->
+      <!-- end teams list -->
     </div>
   </div>
 </div>
