fix(servicerequest): restore previous complete icon

--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -61,7 +61,7 @@
       title="Click To Mark Issue as Complete"
     >
       <span class="nav-text">
-        <i class="ion-android-checkbox-outline"></i>
+        <i class="ti-check-box"></i>
       </span>
     </a>
   </li>
