feat(operational): add zone breakdown report

--- a/app/views/dashboards/operation/index.html
+++ b/app/views/dashboards/operation/index.html
@@ -85,6 +85,13 @@
     ></ng-include>
     <!-- end services summary -->
 
+    <!-- start zones summary -->
+    <ng-include
+      ng-if="operations.zones  && operations.zones.length > 0"
+      src="'views/dashboards/operation/_partials/zones_summary.html'"
+    ></ng-include>
+    <!-- end zones summary -->
+
     <!-- start material used summary -->
     <ng-include
       ng-if="operations.items  && operations.items.length > 0"
