--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -6,7 +6,7 @@
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <span class="navbar-item text-md">
-            Issues
+            Services
           </span>
         </li>
       </ul>
