feat(quality): add measure manage uis

--- a/app/views/manage/side_subnav.html
+++ b/app/views/manage/side_subnav.html
@@ -143,7 +143,10 @@
                 ui-sref-active="active"
                 class="nav-item m-b-xs"
               >
-                <a ui-sref="app.manage.roles" class="nav-link text-muted block">
+                <a
+                  ui-sref="app.manage.qualitymeasures"
+                  class="nav-link text-muted block"
+                >
                   Measures
                 </a>
               </li>
