feat(quality): make cause and measure required

--- a/app/views/servicerequests/_partials/resolve_remarks_modal.html
+++ b/app/views/servicerequests/_partials/resolve_remarks_modal.html
@@ -101,6 +101,7 @@
       Cancel
     </button>
     <button
+      ng-disabled=" !quality.cause || !quality.measure"
       class="btn btn-primary"
       title="Click to Save Remarks"
       ng-click="resolveWithRemarks()"
