--- a/app/views/servicerequests/_partials/resolve_remarks_modal.html
+++ b/app/views/servicerequests/_partials/resolve_remarks_modal.html
@@ -9,7 +9,7 @@
     >
       ×
     </button>
-    <h4 class="modal-title">Quality Control</h4>
+    <h4 class="modal-title">Quality Control Checks</h4>
   </div>
 </div>
 <!-- end modal header -->
