--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -187,7 +187,7 @@
       show-if-has-permit="servicerequest:control quality"
       ng-click="showResolveRemarksModal()"
       class="nav-link text-muted no-border"
-      title="Click To Perform Quality Control Check"
+      title="Click To Perform Quality Control Checks"
     >
       <span class="nav-text">
         <i class="icon-tag"></i>
